--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio | Rohan - Graphic Designer & Developer</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-</head>
+<!DOCTYPE html>  
+<html lang="en">  
+<head>  
+    <meta charset="UTF-8">  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+    <title>Portfolio | Rohan - Graphic Designer & Developer</title>  
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">  
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>  
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">  
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="style.css">  
+
+    <!-- Favicon -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">  
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">  
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">  
+
+</head>  
 <body>
 
     <header class="header">
@@ -186,3 +196,4 @@
 
 </body>
 </html>
+
