--- a/index.html
+++ b/index.html
@@ -1,24 +1,14 @@
-<!DOCTYPE html>  
-<html lang="en">  
-<head>  
-    <meta charset="UTF-8">  
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-    <title>Portfolio | Rohan - Graphic Designer & Developer</title>  
-
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">  
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>  
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">  
-
-    <!-- CSS -->
-    <link rel="stylesheet" href="style.css">  
-
-    <!-- Favicon -->
-    <link rel="icon" href="favicon.ico" type="image/x-icon">  
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">  
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">  
-
-</head>  
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio | Rohan - Graphic Designer & Developer</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
 
     <header class="header">
@@ -164,18 +154,18 @@
                     <p>Have a project in mind? I'm currently available for freelance work and full-time opportunities.</p>
                     <a href="mailto:maheshkumar79759@gmail.com" class="email-link">maheshkumar79759@gmail.com</a>
                 </div>
-                <form class="contact-form" onsubmit="event.preventDefault();">
+                <form class="contact-form" action="mailto:maheshkumar79759@gmail.com?subject=Portfolio Contact Form" method="post" enctype="text/plain">
                     <div class="form-group">
                         <label for="name">Name</label>
-                        <input type="text" id="name" placeholder="Jane Doe" required>
+                        <input type="text" id="name" name="name" placeholder="Jane Doe" required>
                     </div>
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="email" id="email" placeholder="jane@example.com" required>
+                        <input type="email" id="email" name="email" placeholder="jane@example.com" required>
                     </div>
                     <div class="form-group">
                         <label for="message">Message</label>
-                        <textarea id="message" rows="5" placeholder="Tell me about your project..." required></textarea>
+                        <textarea id="message" name="message" rows="5" placeholder="Tell me about your project..." required></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary full-width">Send Message</button>
                 </form>
@@ -187,8 +177,7 @@
         <div class="container footer-content">
             <p>&copy; 2026 Portfolio. Designed & Built by Rohan.</p>
             <div class="social-links">
-                <a href="#">LinkedIn</a>
-                <a href="#">GitHub</a>
+                <a href="https://github.com/rohanvibe">GitHub</a>
                 <a href="https://www.youtube.com/channel/UCVEH5mZUQzf2I1-pEkXlOrQ" target="_blank">YouTube</a>
             </div>
         </div>
@@ -196,6 +185,3 @@
 
 </body>
 </html>
-
-
-
