--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <div class="projects-grid">
                     <!-- Project 1 -->
                     <article class="project-card">
-                        <div class="project-image"></div>
+                        <img src="project-1.png" alt="Personal Portfolio Website" class="project-image" style="width: 100%; height: 200px; object-fit: cover;">
                         <div class="project-content">
                             <h3>Personal Portfolio</h3>
                             <p>This responsive website, designed and built from scratch to showcase my skills in design and development.</p>
@@ -130,7 +130,7 @@
                     </article>
                     <!-- Project 2 -->
                     <article class="project-card">
-                        <div class="project-image"></div>
+                        <img src="project-2.png" alt="YouTube Illustrations" class="project-image" style="width: 100%; height: 200px; object-fit: cover;">
                         <div class="project-content">
                             <h3>YouTube Illustrations</h3>
                             <p>A collection of my digital illustrations and creative process videos shared with my community.</p>
