--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio | Rohan - Graphic Designer & Developer</title>
+    <meta name="description" content="Portfolio of Rohan, a Graphic Designer, Illustrator, and Creative Coder creating unique digital experiences.">
+    <meta property="og:title" content="Portfolio | Rohan - Graphic Designer & Developer">
+    <meta property="og:description" content="Portfolio of Rohan, a Graphic Designer, Illustrator, and Creative Coder.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="project-1.png">
+    <meta name="theme-color" content="#0f172a">
+    <link rel="icon" href="favicon-32x32.png" type="image/png">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -116,7 +124,7 @@
                 <div class="projects-grid animate-on-scroll">
                     <!-- Project 1 -->
                     <article class="project-card">
-                        <img src="project-1.png" alt="Personal Portfolio Website" class="project-image">
+                        <img src="project-1.png" alt="Personal Portfolio Website" class="project-image" loading="lazy">
                         <div class="project-content">
                             <h3>Personal Portfolio</h3>
                             <p>This responsive website, designed and built from scratch to showcase my skills in design and development.</p>
@@ -130,7 +138,7 @@
                     </article>
                     <!-- Project 2 -->
                     <article class="project-card">
-                        <img src="project-2.png" alt="YouTube Illustrations" class="project-image">
+                        <img src="project-2.png" alt="YouTube Illustrations" class="project-image" loading="lazy">
                         <div class="project-content">
                             <h3>YouTube Illustrations</h3>
                             <p>A collection of my digital illustrations and creative process videos shared with my community.</p>
@@ -139,7 +147,7 @@
                                 <span>YouTube</span>
                                 <span>Art</span>
                             </div>
-                            <a href="https://www.youtube.com/channel/UCVEH5mZUQzf2I1-pEkXlOrQ" target="_blank" class="link-arrow">Visit Channel &rarr;</a>
+                            <a href="https://www.youtube.com/channel/UCVEH5mZUQzf2I1-pEkXlOrQ" target="_blank" rel="noopener noreferrer" class="link-arrow">Visit Channel &rarr;</a>
                         </div>
                     </article>
                 </div>
@@ -178,7 +186,7 @@
             <p>&copy; 2026 Portfolio. Designed & Built by Rohan.</p>
             <div class="social-links">
                 <a href="https://github.com/rohanvibe">GitHub</a>
-                <a href="https://www.youtube.com/channel/UCVEH5mZUQzf2I1-pEkXlOrQ" target="_blank">YouTube</a>
+                <a href="https://www.youtube.com/channel/UCVEH5mZUQzf2I1-pEkXlOrQ" target="_blank" rel="noopener noreferrer">YouTube</a>
             </div>
         </div>
     </footer>
